* [ADD] Added new Check_MK backend. Related #18. Thanks to @ikiranreddy for the feedback
* [ADD] Added new warning message when configuration is changed.
* [MOD] Improved socket connections.

* [ADD] New events level threshold by backend. Closes #12
* [ADD] New config password besides hash based auth.
* [ADD] New config backup before saving.
* [ADD] New backend config checking options.
* [MOD] Improved backend config behavior.
* [ADD] New trigger states for Zabbix backends. Related #13. Thanks to @osnet
* [ADD] New option to disable downtime events viewing in main view.
* [ADD] API token random hash generation.
* [MOD] Improved response by caching active backends.
* [MOD] Improved maintenance detection.
* [MOD] Removed some unused properties.
* [MOD] Improved config UI.
* [MOD] Resources minifying.
* [MOD] New events blinking disabled because intensive CPU resource  usage on thin clients.
* [MOD] Modified error message.
* [MOD] Updated language strings
* [FIX] Fixed new events detection on Livestatus backends.
* [FIX] Fixed Zabbix time periods issue. Complex time periods are not yet implemented.
* [FIX] Fixed language selection issue. Related #14. Thanks to @osnet
* [FIX] Fixed warnings when retrieving raw events
* [FIX] Minor bugfixes

* [MOD] Improved backend error handling.
* [FIX] Closes #10. Multiple same backend type were not saved. Thanks to @ZUNbado
* [FIX] Minor bugfixes

* [MOD] Updated Zabbix API to 2.2.5 and 2.4.5 versions.
* [FIX] Fixed issue when retrieving data from Zabbix triggers. Thanks to @ZUNbado
* [FIX] Fixed issue when saving status info column state. Thanks to @ZUNbado

* [FIX] Fixed config saving when no backends are defined.
* [FIX] Fixed language detection when no config is set.
* [FIX] Fixed PHP version comparison
* [MOD] Improved error handling when retrieving events from remote backends.

* [FIX] Fixed PHP version comparison
* [MOD] Improved error handling when retrieving events from remote backends.