@@ -83,7 +83,14 @@ abstract class SocketBase implements SocketInterface
             }
 
             fwrite($this->socket, $inData);
-            $outData = stream_get_contents($this->socket);
+            $code = fread($this->socket, 3);
+            $length = intval(trim(fread($this->socket, 12)));
+            $outData = stream_get_contents($this->socket, $length);
+
+            if ($code != 200) {
+                throw new Exception(sprintf('Invalid response (%s)', trim($outData)), $code);
+            }
+
             fclose($this->socket);
         } catch (Exception $e) {
             throw $e;
